<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context=".controller.ModelActivity">

    <TextView
        android:id="@+id/imeiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/phone_imei"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/FaultTypeEditTextTextMultiLine"
        app:layout_constraintStart_toStartOf="@+id/FaultTypeEditTextTextMultiLine" />

    <TextView
        android:id="@+id/brandTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/phone_brand"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imeiTextView"
        app:layout_constraintStart_toStartOf="@+id/imeiTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/phone_date"
        app:layout_constraintBottom_toBottomOf="@+id/fullModelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toEndOf="@+id/fullModelTextView"
        app:layout_constraintTop_toTopOf="@+id/fullModelTextView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/fullModelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="FullModel"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/brandTextView"
        app:layout_constraintStart_toEndOf="@+id/brandTextView" />

    <EditText
        android:id="@+id/FaultTypeEditTextTextMultiLine"
        android:layout_width="337dp"
        android:layout_height="130dp"
        android:layout_marginBottom="84dp"
        android:background="#cdcdcd"
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SpentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Spent"
        app:layout_constraintStart_toStartOf="@+id/FaultTypeEditTextTextMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/FaultTypeEditTextTextMultiLine" />

    <TextView
        android:id="@+id/PriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/FaultTypeEditTextTextMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/SpentTextView" />

    <TextView
        android:id="@+id/TotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="Total"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>